# GSoM_Assistant

./: .env  main.py  requirements.txt
gsom-telegram-bot/: README.md  pyproject.toml  requirements.txt
gsom-telegram-bot/src/: config.py  main.py  utils.py
gsom-telegram-bot/src/handlers/: callbacks.py
gsom-telegram-bot/src/keyboards/: inline.py
gsom-telegram-bot/tests/: test_basic.py
